Fix keyboard pop-up on mobile devices for calendar

--- a/src/components/datePicker/style.css
+++ b/src/components/datePicker/style.css
@@ -29,5 +29,14 @@ input.xdate-picker{
 }*/
 
 .xdate-picker{
-	width:200px;
+	/*width:100%;*/
 }
+
+.react-datepicker__input-container input{
+	width:100%;
+	/*background-color: red;*/
+}
+
+/*<div className="datePick">*/
+
+/*className="xdate-picker"*/
